# digital-employee-system

./: README.md
backend/: .gitignore  alembic.ini  dev_server.py  pyproject.toml
backend/app/: config.py  logging.py  main.py  routes.py
backend/app/bot/: routes.py
backend/app/customer/: routes.py
backend/app/database/: session.py
backend/app/task/: routes.py
backend/app/user/: routes.py
frontend/: package-lock.json
