[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jackson.wen <jackson.wen@xm.wonder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
apscheduler = "^3.10.4"
asgi-request-id = "^0.1.2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
